{
  "version": 4,
  "terraform_version": "0.14.9",
  "serial": 21,
  "lineage": "a7255a08-d615-dccd-b7d2-1155fed2d221",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terraformSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/TerraformSecurityGroup",
            "location": "westeurope",
            "name": "TerraformSecurityGroup",
            "resource_group_name": "terraform-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraformRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terraformSG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/TerraformSecurityGroup2",
            "location": "westeurope",
            "name": "TerraformSecurityGroup2",
            "resource_group_name": "terraform-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test1234",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraformRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terraformSG3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/TerraformSecurityGroup3",
            "location": "westeurope",
            "name": "TerraformSecurityGroup3",
            "resource_group_name": "terraform-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test12345",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraformRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terraformsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet1/subnets/terraform-vnet1-subnet01",
            "name": "terraform-vnet1-subnet01",
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "terraform-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.terraformRG",
            "azurerm_virtual_network.terraformvnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terraformsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet1/subnets/terraform-vnet1-subnet02",
            "name": "terraform-vnet1-subnet02",
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "terraform-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.terraformRG",
            "azurerm_virtual_network.terraformvnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terraformsubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet2/subnets/terraform-vnet1-subnet03",
            "name": "terraform-vnet1-subnet03",
            "resource_group_name": "terraform-rg",
            "virtual_network_name": "terraform-vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.terraformRG",
            "azurerm_virtual_network.terraformvnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet1sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet1/subnets/terraform-vnet1-subnet01",
            "network_security_group_id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/TerraformSecurityGroup",
            "subnet_id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet1/subnets/terraform-vnet1-subnet01"
          },
          "dependencies": [
            "azurerm_network_security_group.terraformSG",
            "azurerm_resource_group.terraformRG",
            "azurerm_subnet.terraformsubnet1",
            "azurerm_virtual_network.terraformvnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet1sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet1/subnets/terraform-vnet1-subnet02",
            "network_security_group_id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/TerraformSecurityGroup2",
            "subnet_id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet1/subnets/terraform-vnet1-subnet02"
          },
          "dependencies": [
            "azurerm_network_security_group.terraformSG2",
            "azurerm_resource_group.terraformRG",
            "azurerm_subnet.terraformsubnet2",
            "azurerm_virtual_network.terraformvnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet2sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet2/subnets/terraform-vnet1-subnet03",
            "network_security_group_id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/TerraformSecurityGroup3",
            "subnet_id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet2/subnets/terraform-vnet1-subnet03"
          },
          "dependencies": [
            "azurerm_network_security_group.terraformSG3",
            "azurerm_resource_group.terraformRG",
            "azurerm_subnet.terraformsubnet3",
            "azurerm_virtual_network.terraformvnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraformvnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "8.8.8.8",
              "8.8.4.4"
            ],
            "guid": "9b67e4fc-675e-4e28-a4be-6d9bf5773b4c",
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet1",
            "location": "westeurope",
            "name": "terraform-vnet1",
            "resource_group_name": "terraform-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet1/subnets/terraform-vnet1-subnet01",
                "name": "terraform-vnet1-subnet01",
                "security_group": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/TerraformSecurityGroup"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet1/subnets/terraform-vnet1-subnet02",
                "name": "terraform-vnet1-subnet02",
                "security_group": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/TerraformSecurityGroup2"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.terraformRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraformvnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "dns_servers": [
              "8.8.8.8",
              "8.8.4.4"
            ],
            "guid": "dfc546e2-d768-4607-89f2-d3f8bb901a6f",
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet2",
            "location": "westeurope",
            "name": "terraform-vnet2",
            "resource_group_name": "terraform-rg",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet2/subnets/terraform-vnet1-subnet03",
                "name": "terraform-vnet1-subnet03",
                "security_group": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/networkSecurityGroups/TerraformSecurityGroup3"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.terraformRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peeringvnet1tovnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet1/virtualNetworkPeerings/peer1to2",
            "name": "peer1to2",
            "remote_virtual_network_id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet2",
            "resource_group_name": "terraform-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "terraform-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.terraformRG",
            "azurerm_virtual_network.terraformvnet1",
            "azurerm_virtual_network.terraformvnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peeringvnet2tovnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet2/virtualNetworkPeerings/peer2to1",
            "name": "peer2to1",
            "remote_virtual_network_id": "/subscriptions/10430aba-bdac-486e-94b9-e0ef00e82eb8/resourceGroups/terraform-rg/providers/Microsoft.Network/virtualNetworks/terraform-vnet1",
            "resource_group_name": "terraform-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "terraform-vnet2"
          },
          "dependencies": [
            "azurerm_resource_group.terraformRG",
            "azurerm_virtual_network.terraformvnet1",
            "azurerm_virtual_network.terraformvnet2"
          ]
        }
      ]
    }
  ]
}